mod cluster: added import

--- a/cluster_analysis.ipynb
+++ b/cluster_analysis.ipynb
@@ -54,6 +54,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1e432d90-c734-4588-82a8-aa34fb4a9b0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step = 20\n",
+    "times = np.arange(200,2500,step, dtype=int)-1\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4808ca6f-d617-485a-a9f6-a41f451c65d4",
    "metadata": {},
@@ -63,21 +74,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e24bda5b-4e06-40c8-b449-e5d8d925b73a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gsd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m np_5ck1d = np.zeros(\u001b[38;5;28mlen\u001b[39m(times)-\u001b[32m1\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m,\u001b[32m6\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     tmp_nc_5ck1d, tmp_np_5ck1d = \u001b[43mhpacl\u001b[49m\u001b[43m.\u001b[49m\u001b[43mchains_in_condensate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_200\u001b[49m\u001b[43m+\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msim_200-tdp43-lcd_5-ck1d-open/sim\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m_200-tdp43-lcd_5-com-ck1d-open_CAL3_dump_processed.gsd\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m                                                      \u001b[49m\u001b[43mtimes\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m     nc_5ck1d += tmp_nc_5ck1d\n\u001b[32m      8\u001b[39m     np_5ck1d += tmp_np_5ck1d\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/localscratch/zippoema/git/HPA/src/hpa/cluster.py:30\u001b[39m, in \u001b[36mchains_in_condensate\u001b[39m\u001b[34m(input_file, times, eps, min_sample)\u001b[39m\n\u001b[32m     27\u001b[39m n_chains_arr = np.zeros(\u001b[38;5;28mlen\u001b[39m(times))\n\u001b[32m     28\u001b[39m n_phospho_arr = np.zeros(\u001b[38;5;28mlen\u001b[39m(times))\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mgsd\u001b[49m.hoomd.open(input_file, \u001b[33m'\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m input_gsd:\n\u001b[32m     31\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(input_gsd))\n\u001b[32m     32\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i, tt \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(tqdm(times)):\n",
+      "\u001b[31mNameError\u001b[39m: name 'gsd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "nc_5ck1d = np.zeros(len(times)-1)\n",
     "np_5ck1d = np.zeros(len(times)-1)\n",
     "\n",
     "for i in range(1,6):\n",
-    "    tmp_nc_5ck1d, tmp_np_5ck1d = chains_in_condensate_helix(file_helix_splj+f'sim{i}_5-folded-ck1d_200-helix-tdp43_helix_no_rescaling_dump_processed.gsd', times[:-1], 5)\n",
-    "    nc_5ck1d_helix_splj += tmp_nc_5ck1d\n",
-    "    np_5ck1d_helix_splj += tmp_np_5ck1d_helix\n",
+    "    tmp_nc_5ck1d, tmp_np_5ck1d = hpacl.chains_in_condensate(path_200+f'sim_200-tdp43-lcd_5-ck1d-open/sim{i}_200-tdp43-lcd_5-com-ck1d-open_CAL3_dump_processed.gsd', \n",
+    "                                                      times[:-1])\n",
+    "    nc_5ck1d += tmp_nc_5ck1d\n",
+    "    np_5ck1d += tmp_np_5ck1d\n",
     "    \n",
-    "nc_5ck1d_helix_splj /= 5\n",
-    "np_5ck1d_helix_splj /= 5"
+    "nc_5ck1d /= 4\n",
+    "np_5ck1d /= 4"
    ]
   },
   {
