--- a/cluster_analysis.ipynb
+++ b/cluster_analysis.ipynb
@@ -56,14 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "511bc8f0-100e-4a8e-bad7-626947fbe6e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "path_200 = '/localscratch/zippoema/project_ness/simulations/200-tdp43_CAL3/'\n",
     "path_bckp = '/localscratch/zippoema/zippo_phd_data_bckp/project_hps_phospho_tdp43_natcomm_bckp/'\n",
-    "path_an_200 = '/localscratch/zippoema/project_ness/analysis/200-tdp43_CAL3/'"
+    "path_an_200 = '/localscratch/zippoema/project_ness/analysis/200-tdp43_CAL3/'\n",
+    "path_dp = '/localscratch/zippoema/project_ness/simulations/condensate_dephospho/'"
    ]
   },
   {
