--- a/active_droplets.ipynb
+++ b/active_droplets.ipynb
@@ -56,6 +56,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c22fc5f-275b-4d05-b2c2-ae5f9c651cf4",
+   "metadata": {},
+   "source": [
+    "## Compute s(c0_{in}) and s(c0_{out})"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 120,
    "id": "6035f45c-238d-46cd-941f-d050892b3e84",
@@ -4555,9 +4563,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "193aa0c5-0212-4b4e-a5b5-e22a2bfe1747",
+   "metadata": {},
+   "source": [
+    "## Compute diffusion coefficient in dilute"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89012dc9-ac97-4ce9-a7e3-65d5bc67f1b7",
+   "id": "c291352c-10f3-4389-a271-e65e72cc04e6",
    "metadata": {},
    "outputs": [],
    "source": []
