--- a/active_droplets.ipynb
+++ b/active_droplets.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 157,
    "id": "6035f45c-238d-46cd-941f-d050892b3e84",
    "metadata": {},
    "outputs": [
@@ -80,13 +80,13 @@
    ],
    "source": [
     "input_file = path_work+'no_driving_slab/sim_eq_slab_200-tdp43-lcd_2-ck1d-open_10-pp3/sim1_eq_slab_200-tdp43-lcd_2-com-ck1d-open_10-com-pp3_CAL3_'\n",
-    "tr = gsd.hoomd.open(input_file+'dump_centered.gsd', 'rb')\n",
+    "tr = gsd.hoomd.open(input_file+'dump.gsd', 'rb')\n",
     "c = np.loadtxt(input_file+'contacts.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 158,
    "id": "07abfcdb-facb-481d-8c84-e72808c19435",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 159,
    "id": "5b802558-9ec4-49d3-b186-a8f856b273d3",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████| 1250/1250 [02:34<00:00,  8.10it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████| 1250/1250 [02:49<00:00,  7.36it/s]\n"
      ]
     }
    ],
@@ -4572,8 +4572,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 160,
+   "id": "a215f7b0-832f-497e-b5dd-1817b26a2f7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_msd(gsd_file, group=None):\n",
+    "    \"\"\"\n",
+    "    Compute mean squared displacement (MSD) from a GSD trajectory.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    gsd_file : str\n",
+    "        Path to the GSD trajectory file.\n",
+    "    group : list of int or None\n",
+    "        List of particle indices to compute MSD for. \n",
+    "        If None, computes MSD for all particles.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    times : np.ndarray\n",
+    "        Array of timesteps corresponding to MSD values.\n",
+    "    msd : np.ndarray\n",
+    "        Mean squared displacement at each lag time.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Load trajectory\n",
+    "    traj = gsd.hoomd.open(name=gsd_file, mode='rb')\n",
+    "    n_frames = len(traj)\n",
+    "    n_particles = traj[0].particles.N\n",
+    "\n",
+    "    if group is None:\n",
+    "        group = np.arange(n_particles)\n",
+    "    else:\n",
+    "        group = np.array(group)\n",
+    "\n",
+    "    # Collect positions of selected particles\n",
+    "    positions = np.array([frame.particles.position[group] for frame in traj])  \n",
+    "    # Shape: (n_frames, n_selected, 3)\n",
+    "\n",
+    "    # Number of selected particles\n",
+    "    n_sel = positions.shape[1]\n",
+    "\n",
+    "    # Initialize MSD\n",
+    "    msd = np.zeros(n_frames)\n",
+    "\n",
+    "    # Compute MSD using time origins\n",
+    "    for dt in range(n_frames):\n",
+    "        displacements = positions[dt:] - positions[:-dt or None]  # broadcasting\n",
+    "        squared_disp = np.sum(displacements**2, axis=2)  # (n_frames-dt, n_sel)\n",
+    "        msd[dt] = np.mean(squared_disp)\n",
+    "\n",
+    "    # Extract timesteps\n",
+    "    times = np.array([frame.configuration.step for frame in traj])\n",
+    "    dtimes = times - times[0]\n",
+    "\n",
+    "    return dtimes, msd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c291352c-10f3-4389-a271-e65e72cc04e6",
+   "id": "f17365f8-422a-430d-b956-199ef34fb689",
    "metadata": {},
    "outputs": [],
    "source": []
